@@ -25,6 +25,7 @@ import java.awt.Font;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import javax.swing.JComponent;
@@ -256,14 +257,15 @@ public class FFMpegVideo extends Player {
 	}
 
 	private List<String> getCustomArgs() {
+		List<String> customOptions = new ArrayList<String>();
 		String customOptionsString = PMS.getConfiguration().getFfmpegSettings();
 
 		if (StringUtils.isNotBlank(customOptionsString)) {
 			LOGGER.debug("Custom ffmpeg output options: {}", customOptionsString);
 		}
 
-		String[] customOptions = StringUtils.split(customOptionsString);
-		return new ArrayList<String>(Arrays.asList(customOptions));
+		Collections.addAll(customOptions, StringUtils.split(customOptionsString));
+		return customOptions;
 	}
 
 	// XXX hardwired to false and not referenced anywhere else in the codebase
